apps/keycloak/base/05-keycloak-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  namespace: keycloak
  labels:
    app: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      automountServiceAccountToken: false
      containers:
        - name: keycloak
          image: quay.io/keycloak/keycloak:24.0.5
          args:
            - start
            - --http-enabled=true
            - --hostname=keycloak.azhe.my.id
            - --proxy=edge
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "2Gi"
              cpu: "750m"
              ephemeral-storage: "1Gi"
            limits:
              memory: "3Gi"
              cpu: "1.5"
              ephemeral-storage: "2Gi"
          startupProbe:
            httpGet:
              path: /health/ready
              port: 8080
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 60
          readinessProbe:
            httpGet:
              path: /health/ready
              port: 8080
            initialDelaySeconds: 180
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /health/live
              port: 8080
            initialDelaySeconds: 300
            periodSeconds: 20
            timeoutSeconds: 5
            failureThreshold: 3
