apps/keycloak/base/03-postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak-postgres-service
  namespace: keycloak
spec:
  selector:
    app: keycloak-postgres
  ports:
    - port: 5432
      targetPort: 5432
  type: ClusterIP
